tests/errors/switch_variable_case.ki
var v = 3
switch 3:
    case v:
        discard 0
